--- a/src/WebApplication1/Web.config
+++ b/src/WebApplication1/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=CET-15\SQLEXPRESS;Initial Catalog=MyDb;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=MyDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
